force-app/main/default/objects/Trigger_Handler__mdt/Trigger_Handler__mdt.object-meta.xml
<CustomObject>
    <description>Controlling Trigger through meta data,</description>
    <label>Trigger Handler</label>
    <pluralLabel>Trigger Hanlders</pluralLabel>
</CustomObject>