force-app/main/default/objects/Trigger_Handler__mdt/fields/AfterDelete__c.field-meta.xml
<CustomField>
    <fullName>AfterDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Chec to Enable the process for this event type</description>
    <label>AfterDelete</label>
    <type>Checkbox</type>
</CustomField>