force-app/main/default/objects/Trigger_Handler__mdt/fields/AfterInsert__c.field-meta.xml
<CustomField>
    <fullName>AfterInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AfterInsert</label>
    <type>Checkbox</type>
</CustomField>