force-app/main/default/objects/Trigger_Handler__mdt/fields/BeforeDelete__c.field-meta.xml
<CustomField>
    <fullName>BeforeDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BeforeDelete</label>
    <type>Checkbox</type>
</CustomField>