force-app/main/default/objects/Trigger_Handler__mdt/fields/BeforeInsert__c.field-meta.xml
<CustomField>
    <fullName>BeforeInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BeforeInsert</label>
    <type>Checkbox</type>
</CustomField>