force-app/main/default/objects/Trigger_Handler__mdt/fields/Execution_Order__c.field-meta.xml
<CustomField>
    <fullName>Execution_Order__c</fullName>
    <description>Order does matter in most cases leave blank. Unique is better</description>
    <label>Execution Order</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>