force-app/main/default/objects/Trigger_Handler__mdt/fields/HanlderClass__c.field-meta.xml
<CustomField>
    <fullName>HanlderClass__c</fullName>
    <description>The name of the class of the handler</description>
    <label>HanlderClass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>