force-app/main/default/objects/Trigger_Handler__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if handler must be execute</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>